# stuckfish

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/chess/: attack.cc  attack.hh  attack.hxx  bitboard.cc  bitboard.hh  bitboard.hxx  magic.cc  magic.hh  move.cc  move.hh
tests/: test_attack.cc  test_bitboard.cc  test_move.cc
